# codywilson.co

./: .gitignore  pelicanconf.py  peru.yaml  publishconf.py  pyproject.toml
.github/workflows/: pages.yml
content/: digital_assistant_journey.md  just.md  metal_hellsinger_jinjer.md
content/pages/: about.md
output/: 404.html  archives.html  authors.html  categories.html  digital-assistant-journey.html  index.html  just.html  metal-hellsinger-jinjer.html  search.html  sitemap.xml  tags.html  tipuesearch_content.js
output/author/: cody.html
output/category/: communication.html  music.html  projects.html
output/drafts/: digital-assistant-journey.html
output/pages/: about.html
output/tag/: communication.html  ios.html  jinjer.html  language.html  leadership.html  macos.html  metal-hellsinger.html  music-arrangement.html  music-theory.html  personal-assistant.html  psychological-safety.html  software-development.html  video-games.html  writing.html
output/theme/css/: applause-button.css  custom.css  elegant.prod.9e9d5ce754.css  style.min.css  wide.css
themes/elegant/: gulpfile.babel.js
themes/elegant/static/css/: blockquote.css  custom.css  elegant.css  elegant.prod.9e9d5ce754.css  links.css  typography.css
